release/0.2.0 - Mac - Fix OOM errors, java heap and StackOverflow exceptions